2006-01-09 12:01 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: stop at bob's favorite:
	minimal dammage.

2005-12-04 14:07 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMapPointerAllocated) to unify the use of
	gridMapPointer for speed and gridMap for interpolation,
	added this macro to indicate if gridMapPointer is safe to
	use.
	* src/gridmetric (gridSetMapMatrixToAverageOfNodes2)
	call gridInterpolateMap2 with ratio = 0.5 for DRY.
	* src/gridmetric (gridSetMapMatrixToAverageOfNodes3,
	gridSetMapMatrixToAverageOfNodes4, gridEdgeRatio, gridEdgeRatio3,
	gridAR, gridCellARDerivative ) unified gridMapPointer
	access with gridMapPointerAllocated test and alternate
	calls to gridMap.
	
2005-12-04 13:47 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatio) if grid->map is NULL don't use map
	pointers, call gridMap to do interploation.
	* src/grid.c (gridFindEnclosingCell) corrected logic in calls
	to gridFindOtherCellWith3Nodes that allowed the same cell
	to be selected over and over again. (added debug printf with verb)
	* src/grid.c (gridPack,gridRenumber) ignore grid->map if it is NULL
	to prevent segfaults.
	
2005-12-04 13:02 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: called gridCacheCurrentGridAndMap
	to interpolate metric from original grid.
	* src/gridmetric.c (gridAR) if grid->map is NULL don't use map
	pointers, call gridMap to do interploation.
	* src/grid.c (gridCacheCurrentGridAndMap) to correct child_reference
	array that was not malloc'ed large enough and use a more
	robust iteration of nodes to populate child_reference
	* src/grid.c (gridInterpolateMap2) set child_reference instead
	of map is map is NULL.
	* src/grid.c (gridAddNodeWithGlobal) only initialize map to
	identity if it is not NULL.

2005-12-04 12:30 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMap) spiked in logic to interpolate metric from
	child grid, this needs to be tested.
