@@ -29,6 +29,7 @@ librefine_a_SOURCES = \
 	gridmpi.h gridmpi.c \
 	gridmove.h gridmove.c \
 	gridedger.h gridedger.c \
+	gridfacer.h gridfacer.c \
 	gridfortran.h gridfortran.c
 
 libFAKEGeomExtras_a_CFLAGS = @SDKheader@
@@ -71,6 +72,7 @@ mesherx_sources = \
 	gridcad.h gridcad.c \
 	gridmove.h gridmove.c \
 	gridedger.h gridedger.c \
+	gridfacer.h gridfacer.c \
 	gridmpi.h gridmpi.c \
 	gridfiller.h gridfiller.c \
 	layer.h layer.c \
@@ -122,9 +124,10 @@ EXTRA_DIST = mesherx_SyJet.c \
 	gridmpiMT.rb gridmpi_ruby.c \
 	gridmoveMT.rb gridmove_ruby.c \
 	gridedgerMT.rb gridedger_ruby.c \
+	gridfacerMT.rb gridfacer_ruby.c \
 	layerMT.rb layer_ruby.c
 
-TESTS = adjMT.rb nearMT.rb intersectMT.rb lineMT.rb sortMT.rb planMT.rb ringMT.rb queueMT.rb gridMT.rb gridmathMT.rb gridmetricMT.rb gridshapeMT.rb gridinsertMT.rb gridswapMT.rb gridcadMT.rb gridmpiMT.rb gridmoveMT.rb gridedgerMT.rb layerMT.rb
+TESTS = adjMT.rb nearMT.rb intersectMT.rb lineMT.rb sortMT.rb planMT.rb ringMT.rb queueMT.rb gridMT.rb gridmathMT.rb gridmetricMT.rb gridshapeMT.rb gridinsertMT.rb gridswapMT.rb gridcadMT.rb gridmpiMT.rb gridmoveMT.rb gridedgerMT.rb gridfacerMT.rb layerMT.rb
 
 bin_PROGRAMS =
 
