@@ -29,6 +29,7 @@ class RubyExtensionBuilder
   requiredPackages['GridMPI'] = %w{ Adj Line Sort Queue Grid GridMath GridShape GridMetric GridCAD GridInsert GridSwap }
   requiredPackages['GridMove'] = %w{ Adj Line Grid GridMath GridShape GridMetric }
   requiredPackages['GridEdger'] = %w{ Adj Line Grid GridMath GridShape GridMetric GridCAD GridInsert}
+  requiredPackages['GridFacer'] = %w{ Adj Line Grid GridMath GridShape GridMetric GridCAD GridInsert}
   requiredPackages['Layer'] = %w{ Adj Near Intersect Line Grid GridMath GridShape GridMetric GridCAD GridInsert }
 
   requiredPackages[@extension].each { |extension| buildOnly extension }
